src/objects/LSIR__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aLSIRs</relationshipLabel>
        <relationshipName>LSI_R_SV</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LSIRSV_Original_Assessment__c</fullName>
        <label>Original Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maximum</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LSI_R_SV_Score__c</fullName>
        <label>LSI-R:SV Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Notes__c</fullName>
        <label>Survey Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upload_Id__c</fullName>
        <label>Upload Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>aLSIR</label>
    <nameField>
        <displayFormat>LRS-{0000}</displayFormat>
        <label>LSIR name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aLSIRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>